crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__assign_stmt_recovery_16.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"a.b[c.d].e = 1\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 0,
                                    end_line: 1,
                                    end_column: 1,
                                },
                                paths: [
                                    Member(
                                        Node {
                                            node: "b",
                                            filename: "",
                                            line: 1,
                                            column: 2,
                                            end_line: 1,
                                            end_column: 3,
                                        },
                                    ),
                                    Index(
                                        Node {
                                            node: Identifier(
                                                Identifier {
                                                    names: [
                                                        Node {
                                                            node: "c",
                                                            filename: "",
                                                            line: 1,
                                                            column: 4,
                                                            end_line: 1,
                                                            end_column: 5,
                                                        },
                                                        Node {
                                                            node: "d",
                                                            filename: "",
                                                            line: 1,
                                                            column: 6,
                                                            end_line: 1,
                                                            end_column: 7,
                                                        },
                                                    ],
                                                    pkgpath: "",
                                                    ctx: Load,
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 4,
                                            end_line: 1,
                                            end_column: 7,
                                        },
                                    ),
                                    Member(
                                        Node {
                                            node: "e",
                                            filename: "",
                                            line: 1,
                                            column: 9,
                                            end_line: 1,
                                            end_column: 10,
                                        },
                                    ),
                                ],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 10,
                        },
                    ],
                    value: Node {
                        node: NumberLit(
                            NumberLit {
                                binary_suffix: None,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 13,
                        end_line: 1,
                        end_column: 14,
                    },
                    ty: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 14,
        },
    ],
    comments: [],
}
