crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__assign_stmt_recovery_5.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"a = b = \"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 0,
                                    end_line: 1,
                                    end_column: 1,
                                },
                                paths: [],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                        Node {
                            node: Target {
                                name: Node {
                                    node: "b",
                                    filename: "",
                                    line: 1,
                                    column: 4,
                                    end_line: 1,
                                    end_column: 5,
                                },
                                paths: [],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 4,
                            end_line: 1,
                            end_column: 5,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 8,
                        end_line: 1,
                        end_column: 8,
                    },
                    ty: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 7,
        },
    ],
    comments: [],
}
