crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__assign_stmt_recovery_6.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"a() = b. = c\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "b",
                                    filename: "",
                                    line: 1,
                                    column: 6,
                                    end_line: 1,
                                    end_column: 7,
                                },
                                paths: [
                                    Member(
                                        Node {
                                            node: "",
                                            filename: "",
                                            line: 1,
                                            column: 9,
                                            end_line: 1,
                                            end_column: 9,
                                        },
                                    ),
                                ],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 6,
                            end_line: 1,
                            end_column: 8,
                        },
                    ],
                    value: Node {
                        node: Identifier(
                            Identifier {
                                names: [
                                    Node {
                                        node: "c",
                                        filename: "",
                                        line: 1,
                                        column: 11,
                                        end_line: 1,
                                        end_column: 12,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 11,
                        end_line: 1,
                        end_column: 12,
                    },
                    ty: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 12,
        },
    ],
    comments: [],
}
